Resolved invader positioning issue by adding 'overflow: hidden' to the grid container.

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
 .grid {
-	width: 300px;
-	height: 300px;
-	border: solid black 1px;
-	display: flex;
-	flex-wrap: wrap;
+  width: 300px;
+  height: 300px;
+  border: solid black 1px;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .grid div {
-	width: 20px;
-	height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .invader {
-	background-color: purple;
-	border-radius: 10px;
+  background-color: purple;
+  border-radius: 10px;
 }
 
 .shooter {
   background-color: green;
 }
 
-.laser{
+.laser {
   background-color: orange;
 }
 
-.boom{
+.boom {
   background-color: red;
 }
